--- a/demo/css/demo.css
+++ b/demo/css/demo.css
@@ -8,25 +8,48 @@
  */
 
 /* CSS Reset */
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1;-webkit-text-size-adjust:none;overflow-y:scroll}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1;-webkit-text-size-adjust:none;overflow-y:scroll}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}img{vertical-align:top}
+
+/* Demo */
+.wmuSlider,
+.wmuGallery {
+    margin-bottom: 20px;
+}
 
 /* mwuSlider */
 .wmuSlider {
-    width: 100%;
-    background: #000;
-    color: #fff;
-}
-.wmuSlider img {
     position: relative;
+    overflow: hidden;
+}
+.wmuSlider .wmuSliderWrapper {
+    display: none;
+}
+.wmuSlider .wmuSliderWrapper article {
+    position: relative;
+    text-align: center;
+}
+.wmuSlider .wmuSliderWrapper article img {
     max-width: 100%;
     width: auto;
     height: auto;
-    z-index: 1;
-    vertical-align: top;
-    display: block;
-    margin: 0 auto;
 }
-.wmuSlider .wmuPrev, .wmuSlider .wmuNext {
+
+/* mwuGallery */
+.wmuGallery .wmuGalleryImage {
+    position: relative;
+    text-align: center;
+}
+.wmuGallery .wmuGalleryImage img {
+    max-width: 100%;
+    width: auto;
+    height: auto;
+}
+
+/* Default Skin */
+.wmuGallery .wmuGalleryImage {
+    margin-bottom: 10px;
+}
+.wmuSliderPrev, .wmuSliderNext {
     position: absolute;
     width: 40px;
     height: 80px;
@@ -36,41 +59,31 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     margin-top: -40px;
     z-index: 2;
 }
-.wmuSlider .wmuPrev {
+.wmuSliderPrev {
     background-position: 100% 0;
     left: 20px;
 }
-.wmuSlider .wmuNext {
+.wmuSliderNext {
     right: 20px;
 }
-.wmuSlider .wmuControl {
+.wmuSliderPagination {
     z-index: 2;
     position: absolute;
     left: 20px;
     bottom: 10px;
 }
-.wmuSlider .wmuControl li {
+.wmuSliderPagination li {
     float: left;
     margin: 0 5px 0 0;
     list-style-type: none;
 }
-.wmuSlider .wmuControl a {
+.wmuSliderPagination a {
     display: block;
     text-indent: -9999px;
     width: 10px;
     height: 10px;
     background: url(../images/sprites.png) no-repeat 0 -80px;
 }
-.wmuSlider .wmuControl a.wmuActive {
+.wmuSliderPagination a.wmuActive {
     background-position: -10px -80px;
-}
-.wmuSlider .wmuLoading {
-    position: absolute;
-    width: 200px;
-    text-align: center;
-    height: 20px;
-    top: 50%;
-    left: 50%;
-    margin: -10px 0 0 -100px;
-    z-index: 0;
 }
